--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -10,3 +10,4 @@
 @using MicrosoftEntraIdMudBlazor.Client
 @using MicrosoftEntraIdMudBlazor.Client.Shared
 @using MicrosoftEntraIdMudBlazor.Client.Services
+@using MudBlazor
