--- a/Server/Pages/_Host.cshtml
+++ b/Server/Pages/_Host.cshtml
@@ -18,6 +18,7 @@
     <link href="MicrosoftEntraIdMudBlazor.Client.styles.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -41,6 +42,7 @@
     </div>
 
     <script src="_framework/blazor.webassembly.js" ></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="antiForgeryToken.js" ></script>
     @Html.AntiForgeryToken()
 </body>
