--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -4,30 +4,45 @@
 <MudDialogProvider />
 <MudSnackbarProvider />
 
-<div class="page">
-    <div class="sidebar">
+<MudLayout>
+    <MudAppBar Elevation="0">
+        <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
+        <MudSpacer />
+        <MudIconButton Icon="@Icons.Custom.Brands.MudBlazor" Color="Color.Inherit" Link="https://mudblazor.com/" Target="_blank" />
+        <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" Link="https://github.com/MudBlazor/MudBlazor/" Target="_blank" />
+        
+        <AuthorizeView>
+            <Authorized>
+                <strong>Hi @context?.User?.Identity?.Name</strong>
+                <form method="post" action="api/Account/Logout">
+                    <AntiForgeryTokenInput />
+                    <button class="btn btn-link" type="submit">Sign out</button>
+                </form>
+            </Authorized>
+            <NotAuthorized>
+                <a class="whiteColor" href="api/Account/Login">Log in</a>
+            </NotAuthorized>
+        </AuthorizeView>
+
+    </MudAppBar>
+    <MudDrawer @bind-Open="_drawerOpen" Elevation="1">
+        <MudDrawerHeader>
+            <MudText Typo="Typo.h6">ME ID BFF cookies</MudText>
+        </MudDrawerHeader>
         <NavMenu />
-    </div>
-
-    <div class="main">
-        <div class="top-row px-4 auth">
-            <AuthorizeView>
-                <Authorized>
-                    <strong>Hi @context?.User?.Identity?.Name</strong>
-                    <form method="post" action="api/Account/Logout">
-                        <AntiForgeryTokenInput/>
-                        <button class="btn btn-link" type="submit">Sign out</button>
-                    </form>
-                </Authorized>
-                <NotAuthorized>
-                    <a href="api/Account/Login">Log in</a>
-                </NotAuthorized>
-            </AuthorizeView>
-
-        </div>
-
-        <div class="content px-4">
+    </MudDrawer>
+    <MudMainContent>
+        <MudContainer MaxWidth="MaxWidth.Large" Class="my-2 pt-2">
             @Body
-        </div>
-    </div>
-</div>
+        </MudContainer>
+    </MudMainContent>
+</MudLayout>
+
+@code {
+    bool _drawerOpen = true;
+
+    void DrawerToggle()
+    {
+        _drawerOpen = !_drawerOpen;
+    }
+}
