--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -1,49 +1,14 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Blazor ME ID BFF Cookies</a>
-    <button class="navbar-toggler" @onclick="ToggleNavMenu">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-</div>
-
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
-        <AuthorizeView>
-            <Authorized>
-
-                <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                        <span class="oi oi-home" aria-hidden="true"></span> Home
-                    </NavLink>
-                </li>
-                <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="directapi">
-                        <span class="oi oi-list-rich" aria-hidden="true"></span> Direct API call
-                    </NavLink>
-                </li>
-                <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="graphapicall">
-                        <span class="oi oi-list-rich" aria-hidden="true"></span> Graph API call
-                    </NavLink>
-                </li>
-
-            </Authorized>
-            <NotAuthorized>
-                <li class="nav-item px-3">
-                    <p class="whiteColor">no access</p>
-                </li>
-            </NotAuthorized>
-        </AuthorizeView>
-        
-    </ul>
-</div>
-
-@code {
-    private bool collapseNavMenu = true;
-
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
-    }
-}
+﻿<MudNavMenu>  
+    <AuthorizeView>
+        <Authorized>
+            <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
+            <MudNavLink Href="directapi" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Direct API call</MudNavLink>
+            <MudNavLink Href="graphapicall" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Graph API call</MudNavLink>
+        </Authorized>
+        <NotAuthorized>
+            <li class="nav-item px-3">
+                <p>no access</p>
+            </li>
+        </NotAuthorized>
+    </AuthorizeView>
+</MudNavMenu>
