use some Mudblazor controls

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,3 +1,4 @@
 ﻿@page "/"
 
-<h1>Microsoft Entra ID using cookies</h1>
+<MudText Typo="Typo.h3" GutterBottom="true">Microsoft Entra ID using cookies</MudText>
+<MudText Class="mb-8">Welcome to your new app, powered by MudBlazor!</MudText>
